tilføjet find rette gavekurv sektion

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                 </p>
                 <button class="forside__designselv__button">Design selv</button>
             </div>
+            <div class="forside__find-gavekurv">
+                <div class="forside__find-gavekurv__tekst">
+                    <h2 class="forside__find-gavekurv__h2">FIND DEN RETTE GAVEKURV</h2>
+
+                </div>
+
+            </div>
             <div class="forside__designselv__video">
                 <img class="placeholder__forside__img" src="billeder/placeholder__forside.jpg" alt="">
             </div>
