billedegalleri opdateret med billeder, bokse og pile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img class="hero__billede__mobil" src="billeder/hero__frontpage__mobil.jpg" alt="billede af to vinglas fyldt med kold æblecider">
             
             <div class="hero__text">
-                <h1 class="hero__h1">EN GAVE DER SMAGER, <br> 
+                <h1 class="hero__h1">GAVER DER SMAGER, <br> 
                     PYNTER OG GLÆDER
                 </h1>
                 <p class="hero__p">Hos LIWIRA laver vi gavekurve fyldt med gode sager, 
@@ -71,71 +71,70 @@
 
          <div class="forside__find-gavekurv">
             <h2 class="forside__find-gavekurv__h2">FIND DEN RETTE GAVEKURV</h2>
-            <button class="galleri__prevButton"></button>
+            <button id="galleri__prevButton">&#8592;</button>
 
-            <div class="forside__find-gavekurv__galleri">
-                <ul class="find-gavekurv__galleri">
-                    <li class="find-gavekurv__galleri__li"></li>
-                        <a href=""><img src="billeder/barsel.webp" alt="Sammensat gavekurv til eksempelvis en barselsgave med indhold som blandt andet bamse, chokolade og te."></a>
-                        <h3>BARSEL</h3>
-                        <p>199,00kr</p>
-                        <button class="udforsk__knap">Udforsk</button>
-                    </li>
+                <div class="forside__find-gavekurv__galleri">
+                    <ul class="forside__find-gavekurv__liste">
+                        <li class="forside__find-gavekurv__item">
+                            <a href=""><img src="billeder/barsel.webp" alt="Sammensat gavekurv til eksempelvis en barselsgave med indhold som blandt andet bamse, chokolade og te."></a>
+                            <h3>BARSEL</h3>
+                            <p class="forside__find-gavekurv__pris">199,00kr</p>
+                            <button class="udforsk__knap">Udforsk</button>
+                        </li>
 
-                    <li class="find-gavekurv__galleri__li"></li>
-                        <a href=""><img src="billeder/blaahue.webp" alt="Sammensat gavekurv til eksempelvis en student med blå hue med indhold som blandt andet bobler, chokolade og en figur."></a>
-                        <h3>STUDENT</h3>
-                        <p>199,00kr</p>
-                        <button class="udforsk__knap">Udforsk</button>
-                    </li>
+                        <li class="forside__find-gavekurv__item">
+                            <a href=""><img src="billeder/blaahue.webp" alt="Sammensat gavekurv til eksempelvis en student med blå hue med indhold som blandt andet bobler, chokolade og en figur."></a>
+                            <h3>STUDENT</h3>
+                            <p class="forside__find-gavekurv__pris">199,00kr</p>
+                            <button class="udforsk__knap">Udforsk</button>
+                        </li>
 
-                    <li class="find-gavekurv__galleri__li"></li>
-                        <a href=""><img src="billeder/roedhue.webp" alt="Sammensat gavekurv til eksempelvis en student med rød hue med indhold som blandt andet bobler, chokolade og en figur."></a>
-                        <h3>STUDENT</h3>
-                        <p>199,00kr</p>
-                        <button class="udforsk__knap">Udforsk</button>
-                    </li>
+                        <li class="forside__find-gavekurv__item">
+                            <a href=""><img src="billeder/roedhue.webp" alt="Sammensat gavekurv til eksempelvis en student med rød hue med indhold som blandt andet bobler, chokolade og en figur."></a>
+                            <h3>STUDENT</h3>
+                            <p class="forside__find-gavekurv__pris">199,00kr</p>
+                            <button class="udforsk__knap">Udforsk</button>
+                        </li>
 
-                    <li class="find-gavekurv__galleri__li"></li>
-                        <a href=""><img src="billeder/foedselsdag.webp" alt="Sammensat gavekurv til eksempelvis en fødselsdag med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
-                        <h3>FØDSELSDAG</h3>
-                        <p>399,00kr</p>
-                        <button class="udforsk__knap">Udforsk</button>
-                    </li>
+                        <li class="forside__find-gavekurv__item">
+                            <a href=""><img src="billeder/foedselsdag.webp" alt="Sammensat gavekurv til eksempelvis en fødselsdag med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
+                            <h3>FØDSELSDAG</h3>
+                            <p class="forside__find-gavekurv__pris">399,00kr</p>
+                            <button class="udforsk__knap">Udforsk</button>
+                        </li>
 
-                    <li class="find-gavekurv__galleri__li"></li>
-                        <a href=""><img src="billeder/barefordi.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
-                        <h3>BARE FORDI</h3>
-                        <p>399,00kr</p>
-                        <button class="udforsk__knap">Udforsk</button>
-                    </li>
+                        <li class="forside__find-gavekurv__item">
+                            <a href=""><img src="billeder/barefordi.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
+                            <h3>BARE FORDI</h3>
+                            <p class="forside__find-gavekurv__pris">399,00kr</p>
+                            <button class="udforsk__knap">Udforsk</button>
+                        </li>
 
-                    <li class="find-gavekurv__galleri__li"></li>
-                        <a href=""><img src="billeder/tilham.webp" alt="Sammensat gavekurv til eksempelvis ham med indhold som blandt andet øl, lakrids, chokolade og en figur."></a>
-                        <h3>TIL HAM</h3>
-                        <p>299,00kr</p>
-                        <button class="udforsk__knap">Udforsk</button>
-                    </li>
+                        <li class="forside__find-gavekurv__item">
+                            <a href=""><img src="billeder/tilham.webp" alt="Sammensat gavekurv til eksempelvis ham med indhold som blandt andet øl, lakrids, chokolade og en figur."></a>
+                            <h3>TIL HAM</h3>
+                            <p class="forside__find-gavekurv__pris">299,00kr</p>
+                            <button class="udforsk__knap">Udforsk</button>
+                        </li>
 
-                    <li class="find-gavekurv__galleri__li"></li>
-                        <a href=""><img src="billeder/tilhende.webp" alt="Sammensat gavekurv til eksempelvis hende med indhold som blandt andet vin, macaroons og chokolade."></a>
-                        <h3>TIL HENDE</h3>
-                        <p>299,00kr</p>
-                        <button class="udforsk__knap">Udforsk</button>
-                    </li>
+                        <li class="forside__find-gavekurv__item">
+                            <a href=""><img src="billeder/tilhende.webp" alt="Sammensat gavekurv til eksempelvis hende med indhold som blandt andet vin, macaroons og chokolade."></a>
+                            <h3>TIL HENDE</h3>
+                            <p class="forside__find-gavekurv__pris">299,00kr</p>
+                            <button class="udforsk__knap">Udforsk</button>
+                        </li>
 
-                    <li class="find-gavekurv__galleri__li"></li>
-                        <a href=""><img src="billeder/jubilaeum.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
-                        <h3>JUBILÆUM</h3>
-                        <p>499,00kr</p>
-                        <button class="udforsk__knap">Udforsk</button>
-                    </li>
-                </ul>
-
-            </div>
-
-
+                        <li class="forside__find-gavekurv__item">
+                            <a href=""><img src="billeder/jubilaeum.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
+                            <h3>JUBILÆUM</h3>
+                            <p class="forside__find-gavekurv__pris">499,00kr</p>
+                            <button class="udforsk__knap">Udforsk</button>
+                        </li>
+                    </ul>
+                </div>    
+            <button id="galleri__nextButton">&#8594;</button>
         </div>
+
             <div class="forside__designselv__video">
                 <img class="placeholder__forside__img" src="billeder/placeholder__forside.jpg" alt="">
             </div>
