a href fjernet fra billeder /billedgalleri

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <ul class="forside__find-gavekurv__liste">
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <a href=""><img src="billeder/barsel.webp" alt="Sammensat gavekurv til eksempelvis en barselsgave med indhold som blandt andet bamse, chokolade og te."></a>
+                                <img src="billeder/barsel.webp" alt="Sammensat gavekurv til eksempelvis en barselsgave med indhold som blandt andet bamse, chokolade og te.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>BARSEL</h3>
@@ -94,7 +94,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <a href=""><img src="billeder/blaahue.webp" alt="Sammensat gavekurv til eksempelvis en student med blå hue med indhold som blandt andet bobler, chokolade og en figur."></a>
+                                <img src="billeder/blaahue.webp" alt="Sammensat gavekurv til eksempelvis en student med blå hue med indhold som blandt andet bobler, chokolade og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>STUDENT</h3>
@@ -105,7 +105,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <a href=""><img src="billeder/roedhue.webp" alt="Sammensat gavekurv til eksempelvis en student med rød hue med indhold som blandt andet bobler, chokolade og en figur."></a>
+                                <img src="billeder/roedhue.webp" alt="Sammensat gavekurv til eksempelvis en student med rød hue med indhold som blandt andet bobler, chokolade og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>STUDENT</h3>
@@ -116,7 +116,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <a href=""><img src="billeder/foedselsdag.webp" alt="Sammensat gavekurv til eksempelvis en fødselsdag med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
+                                <img src="billeder/foedselsdag.webp" alt="Sammensat gavekurv til eksempelvis en fødselsdag med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>FØDSELSDAG</h3>
@@ -127,7 +127,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <a href=""><img src="billeder/barefordi.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
+                                <img src="billeder/barefordi.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>BARE FORDI</h3>
@@ -138,7 +138,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <a href=""><img src="billeder/tilham.webp" alt="Sammensat gavekurv til eksempelvis ham med indhold som blandt andet øl, lakrids, chokolade og en figur."></a>
+                                <img src="billeder/tilham.webp" alt="Sammensat gavekurv til eksempelvis ham med indhold som blandt andet øl, lakrids, chokolade og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>TIL HAM</h3>
@@ -149,7 +149,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <a href=""><img src="billeder/tilhende.webp" alt="Sammensat gavekurv til eksempelvis hende med indhold som blandt andet vin, macaroons og chokolade."></a>
+                                <img src="billeder/tilhende.webp" alt="Sammensat gavekurv til eksempelvis hende med indhold som blandt andet vin, macaroons og chokolade.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>TIL HENDE</h3>
@@ -160,7 +160,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <a href=""><img src="billeder/jubilaeum.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur."></a>
+                                <img src="billeder/jubilaeum.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>JUBILÆUM</h3>
