--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
                 </nav>
             </div>
         </div>
+
+        <!-- Mathilde -->  
+        <div id="soegefelt">
+            <button id="soegefeltButton" onclick="soeFeltIndput()"><img class="soegefeltBillede" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
+
+            <div id="soegBoks" style="display: none;">
+                <button id="lukKnap" onclick="soeFeltIndput()" style="display: none;"><img class="lukKnapBillede" src="billeder/luknap.webp" alt="kryds"></button>
+                <input id="indputFelt" type="text" placeholder="Hvad leder du efter?" name="soeg" style="display: none;" onkeyup="filterLinks()">
+
+                <ul id="soegeResultater"></ul> <!-- tom ul liste som bliver fyldt i js med søgeresultater -->
+            </div>    
+        </div>
+
     </header>
     <main>
         <div class="hero">
