--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <button id="soegefeltButton" onclick="soeFeltIndput()"><img class="soegefeltBillede" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
     
                     <div id="soegBoks" style="display: none;">
-                        <button id="lukKnap" onclick="soeFeltIndput()" style="display: none;"><img class="lukKnapBillede" src="billeder/luknap.webp" alt="kryds"></button>
+                        <button id="lukKnap" onclick="soeFeltIndput()" style="display: none;">x</button>
                         <input id="indputFelt" type="text" placeholder="Hvad leder du efter?" name="soeg" style="display: none;" onkeyup="filterLinks()">
     
                         <ul id="soegeResultater"></ul>
