style søgefelt style mobil

--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
 
 
             <div class="header__mobil__top">
-            
                 <!-- Mathilde -->  
                 <div id="soegefelt">
                     <button id="soegefeltButton" onclick="soeFeltIndput()"><img class="soegefeltBillede" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
-       
                 </div>
             </div>
         </div>
@@ -38,6 +36,12 @@
 
         <div class="header__desktop">
             <div class="header__desktop__bottom">
+
+                <!-- Mathilde -->  
+                <div id="soegefeltDesktop">
+                    <button id="soegefeltButtonDesktop" onclick="soeFeltIndputDesktop()"><img class="soegefeltBilledeDesktop" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
+                </div>
+
                 <nav class="header__desktop__nav">
                     <ul class="header__desktop__ul">
                         <li class="nav__desktop__dropdown">
@@ -61,11 +65,19 @@
     </header>
     <main>
 
+        <!-- Mathilde --> 
         <div id="soegBoks" style="display: none;">
             <button id="lukKnap" onclick="soeFeltIndput()" style="display: none;">x</button>
             <input id="indputFelt" type="text" placeholder="Hvad leder du efter?" name="soeg" style="display: none;" onkeyup="filterLinks()">
 
             <ul id="soegeResultater"></ul>
+        </div> 
+
+        <div id="soegBoksDesktop" style="display: none;">
+            <button id="lukKnapDesktop" onclick="soeFeltIndputDesktop()" style="display: none;">x</button>
+            <input id="indputFeltDesktop" type="text" placeholder="Hvad leder du efter?" name="soeg" style="display: none;" onkeyup="filterLinksDesktop()">
+
+            <ul id="soegeResultaterDesktop"></ul>
         </div> 
 
         <div class="hero">
