--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
 
 
             <div class="header__mobil__top">
-                <!-- Mathilde -->  
-                <div id="soegefelt">
-                    <button id="soegefeltButton" onclick="soeFeltIndput()"><img class="soegefeltBillede" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
+
+                <div class="header__mobil__ikoner">
+                    <!-- Mathilde -->  
+                    <div id="soegefelt">
+                        <button id="soegefeltButton" onclick="soeFeltIndput()"><img class="soegefeltBillede" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
+                    </div>
+
+                    <div class="desktop__ikoner__kurv">
+                        <img class="desktop__kurv__img" src="billeder/kurvikon.webp" alt="ikon af kurv">
+                    </div>
                 </div>
             </div>
         </div>
@@ -35,12 +42,8 @@
         <div class="header__mobil__bottom"></div>
 
         <div class="header__desktop">
+            
             <div class="header__desktop__bottom">
-
-                <!-- Mathilde -->  
-                <div id="soegefeltDesktop">
-                    <button id="soegefeltButtonDesktop" onclick="soeFeltIndputDesktop()"><img class="soegefeltBilledeDesktop" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
-                </div>
 
                 <nav class="header__desktop__nav">
                     <ul class="header__desktop__ul">
@@ -57,7 +60,20 @@
                         <li class="nav__desktop__li">Kontakt</li>
                     </ul>
                 </nav>
-                
+
+                <div class="header__desktop__ikoner">
+
+                    <!-- Mathilde -->  
+                    <div id="soegefeltDesktop">
+                        <button id="soegefeltButtonDesktop" onclick="soeFeltIndputDesktop()"><img class="soegefeltBilledeDesktop" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
+                    </div>
+
+                    <div class="desktop__ikoner__kurv">
+                        <img class="desktop__kurv__img" src="billeder/kurvikon.webp" alt="ikon af kurv">
+                    </div>
+
+                </div>
+
             </div>
 
         </div>
