js galleri tilføjet

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-
+       <!--- Kirja -->
         <div class="forside__find-gavekurv">
             <h2 class="forside__find-gavekurv__h2">FIND DEN RETTE GAVEKURV</h2>
             <button id="galleri__prevButton">&#8592;</button>
