styling header desktop

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             
             <div class="header__desktop__bottom">
 
+                <div class="header__desktop__left"></div>
+
                 <nav class="header__desktop__nav">
                     <ul class="header__desktop__ul">
                         <li class="nav__desktop__dropdown">
