--- a/designselv.html
+++ b/designselv.html
@@ -22,36 +22,39 @@
     </header>
 
     <main>
-        <div class="designselv__menu">
-            <button class="designselv__menu__chokolade"></button>
-        </div>
 
-        <div class="designselv__menu">
-            <button class="designselv__menu__delikatesser"></button>
-        </div>
+        <div class="desigenselv__menu">
+            <div class="designselv__menu__options">
+                <button class="designselv__menu__button" data-target="chokolade" onclick="designSelvMenu(button1)">Chokolade</button>
+            </div>
 
-        <div class="designselv__menu">
-            <button class="designselv__menu__vin"></button>
-        </div>
+            <div class="designselv__menu__options">
+                <button class="designselv__menu__button" data-target="delikatesser" onclick="designSelvMenu(button2)">Delikatesser</button>
+            </div>
 
-        <div class="designselv__menu">
-            <button class="designselv__menu__øl"></button>
-        </div>
+            <div class="designselv__menu__options">
+                <button class="designselv__menu__button" data-target="vin" onclick="designSelvMenu(button3)">Vin</button>
+            </div>
 
-        <div class="designselv__menu">
-            <button class="designselv__menu__saft"></button>
-        </div>
+            <div class="designselv__menu__options">
+                <button class="designselv__menu__button" data-target="øl" onclick="designSelvMenu(button4)">Øl</button>
+            </div>
 
-        <div class="designselv__menu">
-            <button class="designselv__menu__te"></button>
-        </div>
+            <div class="designselv__menu__options">
+                <button class="designselv__menu__button" data-target="saft" onclick="designSelvMenu(button5)">Saft</button>
+            </div>
 
-        <div class="designselv__menu">
-            <button class="designselv__menu__damser"></button>
-        </div>
+            <div class="designselv__menu__options">
+                <button class="designselv__menu__button" data-target="te" onclick="designSelvMenu(button6)">Te</button>
+            </div>
 
-        <div class="designselv__menu">
-            <button class="designselv__menu__kermik"></button>
+            <div class="designselv__menu__options">
+                <button class="designselv__menu__button" data-target="bamser" onclick="designSelvMenu(button7)">Bamser</button>
+            </div>
+
+            <div class="designselv__menu__options">
+                <button class="designselv__menu__button" data-target="kermik" onclick="designSelvMenu(button8)">Kermik</button>
+            </div>
         </div>
 
     </main>
