design selv øverste del html

--- a/designselv.html
+++ b/designselv.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +22,26 @@
     </header>
 
     <main>
+      <div class="designselv">
+        <div class="designselv__billede-container">
+          <img src="billeder/liwira gavekurv.webp" alt="Din gavekurv, hvor du kan se, hvad du har lagt i" class="dingavekurv__billede"/>
+        </div>
+        <div class="designselv__indhold">
+          <h2 class="designselv__titel">LAV DIN EGEN GAVEKURV</h2>
+          <p class="designselv__beskrivelse">
+            Klik de ting i kurven, du gerne vil give - og se med det samme, hvordan gavekurven tager form.
+          </p>
+
+          <div class="designselv__valgt">
+            <h3>Dine valg</h3>
+            <ul class="designselv__items"id="valgteItems">
+
+            </ul>
+            <p><strong>Pris i alt:</strong> <span id="totalPris">0 kr</span></p>
+            <button id="tilfojTilKurv">Tilføj til kurv</button>
+          </div>
+        </div>
+      </div>
 
 <div class="designselv__menu">
     <button class="designselv__menu__button" data-target="chokolade" onclick="designSelvMenu(this)">Chokolade</button>
