--- a/index.html
+++ b/index.html
@@ -246,9 +246,10 @@
 
     <footer class="footer">
         <div class="footer-sektion">
+            <img class="footer_logo" src="billeder/logo__lewira.png" alt="liwira_logo">
             <div class="footer-knap" onclick="toggleCheckbox('girltalk-checkbox')">
                 <span class="span__knap f">+</span>
-                <h3 class="om_gt">Kontakt</h3>
+                <h3 class="kontakt_liwira">Kontakt</h3>
             </div>
             <input type="checkbox" id="girltalk-checkbox" class="footer-checkbox">
             <div id="girltalk-indhold" class="footer-indhold">
@@ -275,13 +276,23 @@
             </div>
         </div>
     
-        <div class="footer-sektion kontakt">
-            <img class="footer_logo" src="billeder/girltalk_logo.webp" alt="girltalks logo">
-            <p>Martinsvej 7, 1
-            <p>1926 Frederiksberg C</p>
-            <p id="cvr">CVR 30 14 53 48</p>
+        <div class="footer-sektion">
+            <div class="footer-knap" onclick="toggleCheckbox('follow-checkbox')">
+                <span class="span__knap">+</span>
+                <h3 class="folg_os">Åbningstider</h3>
+            </div>
+            <input type="checkbox" id="follow-checkbox" class="footer-checkbox">
+            <div id="follow-indhold" class="footer-indhold">
+                <ul>
+                    <li><a href="#">Man-fre 11:00-17:00</a></li>
+                    <li><a href="#">Lør 10:00-12:00</a></li>
+                    <li><a href="#">Søn lukket</a></li>
+                </ul>
+            </div>
         </div>
-    
+
+
+
         <div class="footer-sektion kontakt-information">
             <h3 class="kontakt_os">Kontakt os</h3>
             <p>info@girltalk.dk</p>
