design selv liwira kurv tilføjet

--- a/designselv.html
+++ b/designselv.html
@@ -20,6 +20,69 @@
     <header>
 
     </header>
+    <header>
+      <div class="header__top">
+          <div class="header__top__logo">
+              <img class="top__logo__img" src="billeder/logo__lewira.png" alt="Lewiras logo">
+          </div>
+
+
+          <div class="header__mobil__top">
+
+              <div class="header__mobil__ikoner">
+                  <!-- Mathilde -->  
+                  <div id="soegefelt">
+                      <button id="soegefeltButton" onclick="soeFeltIndput()"><img class="soegefeltBillede" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
+                  </div>
+
+                  <div class="desktop__ikoner__kurv">
+                      <img class="desktop__kurv__img" src="billeder/kurvikon.webp" alt="ikon af kurv">
+                  </div>
+              </div>
+          </div>
+      </div>
+
+
+      <div class="header__mobil__bottom"></div>
+
+      <div class="header__desktop">
+          
+          <div class="header__desktop__bottom">
+
+              <div class="header__desktop__left"></div>
+
+              <nav class="header__desktop__nav">
+                  <ul class="header__desktop__ul">
+                      <li class="nav__desktop__dropdown">
+                          <a class="desktop__dropdown__link" href="index.html">Gavekurve <img src="billeder/dropdown__pil.png" alt="pil ned"></a>
+                          <ul class="desktop__dropdown__ul">
+                              <li class="desktop__dropdown__li"><a class="desktop__dropdown__link" href="design selv.html">Design selv gavekurv</a></li>
+                              <li class="desktop__dropdown__li"><a class="desktop__dropdown__link" href="sammensatte.html">Sammensatte gavekurve</a></li>
+                          </ul>
+                      </li>
+                      <li class="nav__desktop__li">Sortiment</li>
+                      <li class="nav__desktop__li">Erhverv</li>
+                      <li class="nav__desktop__li">Om os</li>
+                      <li class="nav__desktop__li">Kontakt</li>
+                  </ul>
+              </nav>
+
+              <div class="header__desktop__ikoner">
+
+                  <!-- Mathilde -->  
+                  <div id="soegefeltDesktop">
+                      <button id="soegefeltButtonDesktop" onclick="soeFeltIndputDesktop()"><img class="soegefeltBilledeDesktop" src="billeder/soegikon.webp" alt="forstørrelsslag som søge ikon"></button>
+                  </div>
+
+                  <div class="desktop__ikoner__kurv">
+                      <img class="desktop__kurv__img" src="billeder/kurvikon.webp" alt="ikon af kurv">
+                  </div>
+
+              </div>
+
+          </div>
+
+      </div>
 
     <main>
       <div class="designselv">
@@ -29,7 +92,7 @@
         <div class="designselv__indhold">
           <h2 class="designselv__titel">LAV DIN EGEN GAVEKURV</h2>
           <p class="designselv__beskrivelse">
-            Klik de ting i kurven, du gerne vil give - og se med det samme, hvordan gavekurven tager form.
+            Klik de ting i kurven, du gerne vil give - og se med det samme, hvordan gavekurven tager form. Du kan altid ændre indholdet undervejs. Når du er tilfreds,  pakker vi den ind, gør den klar til afhentning eller sender den afsted. 
           </p>
 
           <div class="designselv__valgt">
