--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
     
 
     <footer class="footer">
+        <img class="footer_logo" src="billeder/logo__lewira.png" alt="liwira_logo">
+
         <div class="footer-sektion">
-            <img class="footer_logo" src="billeder/logo__lewira.png" alt="liwira_logo">
             <div class="footer-knap" onclick="toggleCheckbox('girltalk-checkbox')">
                 <span class="span__knap f">+</span>
                 <h3 class="kontakt_liwira">Kontakt</h3>
@@ -264,7 +265,7 @@
         <div class="footer-sektion">
             <div class="footer-knap" onclick="toggleCheckbox('follow-checkbox')">
                 <span class="span__knap">+</span>
-                <h3 class="folg_os">Åbningstider</h3>
+                <h3 class="abningstider_liwira">Åbningstider</h3>
             </div>
             <input type="checkbox" id="follow-checkbox" class="footer-checkbox">
             <div id="follow-indhold" class="footer-indhold">
@@ -275,31 +276,24 @@
                 </ul>
             </div>
         </div>
-    
+
         <div class="footer-sektion">
-            <div class="footer-knap" onclick="toggleCheckbox('follow-checkbox')">
+            <div class="footer-knap" onclick="toggleCheckbox('social-checkbox')">
                 <span class="span__knap">+</span>
-                <h3 class="folg_os">Åbningstider</h3>
+                <h3 class="folg_os">Følg os her</h3>
             </div>
-            <input type="checkbox" id="follow-checkbox" class="footer-checkbox">
-            <div id="follow-indhold" class="footer-indhold">
+            <input type="checkbox" id="social-checkbox" class="footer-checkbox">
+            <div id="social-indhold" class="footer-indhold">
                 <ul>
-                    <li><a href="#">Man-fre 11:00-17:00</a></li>
-                    <li><a href="#">Lør 10:00-12:00</a></li>
-                    <li><a href="#">Søn lukket</a></li>
+                    <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+                    <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+                    <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
+ 
 
 
-
-        <div class="footer-sektion kontakt-information">
-            <h3 class="kontakt_os">Kontakt os</h3>
-            <p>info@girltalk.dk</p>
-            <p>51 91 33 77</p>
-            <p>Telefontid mandag til torsdag kl. <br> 10.00 til 13.00</p>
-            <p id="faq"> GirlTalks FAQ Til Projektopgaver</p>
-        </div>
     </footer>
 
 </body>
