--- a/index.html
+++ b/index.html
@@ -284,11 +284,7 @@
             </div>
             <input type="checkbox" id="social-checkbox" class="footer-checkbox">
             <div id="social-indhold" class="footer-indhold">
-                <ul>
-                    <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-                    <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
-                </ul>
+                <img class="footer_socialemedier" src="billeder/socialemedier.png" alt="liwira_socialemedier">
             </div>
         </div>
  
