små rettelser af menu bar

--- a/designselv.html
+++ b/designselv.html
@@ -408,16 +408,16 @@
       <div class="udvalg__informations__boks">
 
         <div class="img__informations__boks">
-          <img class="designselv__udvalg__img" src="billeder/vin/rose.webp" alt="billede af rødhvin">
+          <img class="designselv__udvalg__img" src="billeder/vin/roedvin.webp" alt="billede af rødhvin">
           <h3 class="udvalg__img__h3">En intens, rubinrød vin med delikate noter af sorte kirsebær, modne blommer og et strejf af tørrede krydderurter. 
           <br><br>Smagen er rund og fyldig med bløde tanniner, let vanilje fra fadlagring og en lang, varm eftersmag. 
           <br><br>Perfekt til kraftige retter som grillet oksekød, vildt eller et solidt ostebord.
           </h3>
         </div>
 
-        <h3 class="designselv__udvalg__h3"></h3>
+        <h3 class="designselv__udvalg__h3">Rig og Fyldig Rødvin</h3>
 
-        <p class="designselv__udvalg__p"></p>
+        <p class="designselv__udvalg__p">179 kr</p>
 
         <div class="udvalg__button__box">
           <button class="designselv__udvalg__button">Tilføj</button>
