--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <ul class="forside__find-gavekurv__liste">
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <img src="billeder/barsel.webp" alt="Sammensat gavekurv til eksempelvis en barselsgave med indhold som blandt andet bamse, chokolade og te.">
+                                <img src="billeder/gavekurve/barsel.webp" alt="Sammensat gavekurv til eksempelvis en barselsgave med indhold som blandt andet bamse, chokolade og te.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>BARSEL</h3>
@@ -149,7 +149,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <img src="billeder/blaahue.webp" alt="Sammensat gavekurv til eksempelvis en student med blå hue med indhold som blandt andet bobler, chokolade og en figur.">
+                                <img src="billeder/gavekurve/blaahue.webp" alt="Sammensat gavekurv til eksempelvis en student med blå hue med indhold som blandt andet bobler, chokolade og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>STUDENT</h3>
@@ -160,7 +160,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <img src="billeder/roedhue.webp" alt="Sammensat gavekurv til eksempelvis en student med rød hue med indhold som blandt andet bobler, chokolade og en figur.">
+                                <img src="billeder/gavekurve/roedhue.webp" alt="Sammensat gavekurv til eksempelvis en student med rød hue med indhold som blandt andet bobler, chokolade og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>STUDENT</h3>
@@ -171,7 +171,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <img src="billeder/foedselsdag.webp" alt="Sammensat gavekurv til eksempelvis en fødselsdag med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
+                                <img src="billeder/gavekurve/foedselsdag.webp" alt="Sammensat gavekurv til eksempelvis en fødselsdag med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>FØDSELSDAG</h3>
@@ -182,7 +182,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <img src="billeder/barefordi.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
+                                <img src="billeder/gavekurve/barefordi.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>BARE FORDI</h3>
@@ -193,7 +193,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <img src="billeder/tilham.webp" alt="Sammensat gavekurv til eksempelvis ham med indhold som blandt andet øl, lakrids, chokolade og en figur.">
+                                <img src="billeder/gavekurve/tilham.webp" alt="Sammensat gavekurv til eksempelvis ham med indhold som blandt andet øl, lakrids, chokolade og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>TIL HAM</h3>
@@ -204,7 +204,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <img src="billeder/tilhende.webp" alt="Sammensat gavekurv til eksempelvis hende med indhold som blandt andet vin, macaroons og chokolade.">
+                                <img src="billeder/gavekurve/tilhende.webp" alt="Sammensat gavekurv til eksempelvis hende med indhold som blandt andet vin, macaroons og chokolade.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>TIL HENDE</h3>
@@ -215,7 +215,7 @@
 
                         <li class="forside__find-gavekurv__item">
                             <div class="forside__find-gavekurv__billede-wrapper">
-                                <img src="billeder/jubilaeum.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
+                                <img src="billeder/gavekurve/jubilaeum.webp" alt="Sammensat gavekurv til eksempelvis en jubilæum med indhold som blandt andet bobler, vin, chokolade, nødder og en figur.">
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>JUBILÆUM</h3>
