design selv media queries opdateret

--- a/designselv.html
+++ b/designselv.html
@@ -85,6 +85,7 @@
       </div>
 
     <main>
+      <!----Kirja-->
       <div class="designselv">
         <div class="designselv__billede-container">
           <img src="billeder/liwira gavekurv.webp" alt="Din gavekurv, hvor du kan se, hvad du har lagt i" class="dingavekurv__billede"/>
@@ -92,19 +93,21 @@
         <div class="designselv__indhold">
           <h2 class="designselv__titel">LAV DIN EGEN GAVEKURV</h2>
           <p class="designselv__beskrivelse">
-            Klik de ting i kurven, du gerne vil give - og se med det samme, hvordan gavekurven tager form. Du kan altid ændre indholdet undervejs. Når du er tilfreds,  pakker vi den ind, gør den klar til afhentning eller sender den afsted. 
+            Klik de ting i kurven, du gerne vil give - og se med det samme, hvordan gavekurven tager form. <br>Du kan altid ændre indholdet undervejs. Når du er tilfreds,  pakker vi den ind, gør den klar til afhentning eller sender den afsted. 
           </p>
 
           <div class="designselv__valgt">
-            <h3>Dine valg</h3>
+            <h3>DINE VALG</h3>
             <ul class="designselv__items"id="valgteItems">
 
             </ul>
-            <p><strong>Pris i alt:</strong> <span id="totalPris">0 kr</span></p>
+            <p><strong>Pris i alt:</strong> <span id="totalPris">0 kr.</span></p>
             <button id="tilfojTilKurv">Tilføj til kurv</button>
           </div>
         </div>
       </div>
+
+      <!---Mathilde-->
 
 <div class="designselv__menu">
     <button class="designselv__menu__button" data-target="chokolade" onclick="designSelvMenu(this)">Chokolade</button>
