--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>BARSEL</h3>
-                                <p class="forside__find-gavekurv__pris">199,00kr</p>
+                                <p class="forside__find-gavekurv__pris">199,00kr.</p>
                                 <button class="udforsk__knap">Udforsk</button>
                             </div>
                         </li>
@@ -153,7 +153,7 @@
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>STUDENT</h3>
-                                <p class="forside__find-gavekurv__pris">199,00kr</p>
+                                <p class="forside__find-gavekurv__pris">199,00kr.</p>
                                 <button class="udforsk__knap">Udforsk</button>
                             </div>
                         </li>
@@ -164,7 +164,7 @@
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>STUDENT</h3>
-                                <p class="forside__find-gavekurv__pris">199,00kr</p>
+                                <p class="forside__find-gavekurv__pris">199,00kr.</p>
                                 <button class="udforsk__knap">Udforsk</button>
                             </div>
                         </li>
@@ -175,7 +175,7 @@
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>FØDSELSDAG</h3>
-                                <p class="forside__find-gavekurv__pris">399,00kr</p>
+                                <p class="forside__find-gavekurv__pris">399,00kr.</p>
                                 <button class="udforsk__knap">Udforsk</button>
                             </div>
                         </li>
@@ -186,7 +186,7 @@
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>BARE FORDI</h3>
-                                <p class="forside__find-gavekurv__pris">399,00kr</p>
+                                <p class="forside__find-gavekurv__pris">399,00kr.</p>
                                 <button class="udforsk__knap">Udforsk</button>
                             </div>
                         </li>
@@ -197,7 +197,7 @@
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>TIL HAM</h3>
-                                <p class="forside__find-gavekurv__pris">299,00kr</p>
+                                <p class="forside__find-gavekurv__pris">299,00kr.</p>
                                 <button class="udforsk__knap">Udforsk</button>
                             </div>
                         </li>
@@ -208,7 +208,7 @@
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>TIL HENDE</h3>
-                                <p class="forside__find-gavekurv__pris">299,00kr</p>
+                                <p class="forside__find-gavekurv__pris">299,00kr.</p>
                                 <button class="udforsk__knap">Udforsk</button>
                             </div>
                         </li>
@@ -219,7 +219,7 @@
                             </div>
                             <div class="forside__find-gavekurv__indhold">
                                 <h3>JUBILÆUM</h3>
-                                <p class="forside__find-gavekurv__pris">499,00kr</p>
+                                <p class="forside__find-gavekurv__pris">499,00kr.</p>
                                 <button class="udforsk__knap">Udforsk</button>
                             </div>
                         </li>
@@ -243,7 +243,7 @@
         </div>
     </main>
     
-
+      <!---Alice-->
     <footer class="footer">
         <img class="footer_logo" src="billeder/logo__lewira.png" alt="liwira_logo">
 
